@@ -22,7 +22,7 @@
 define('ZABBIX_VERSION',		'3.2.0beta2');
 define('ZABBIX_API_VERSION',	'3.2.0');
 define('ZABBIX_EXPORT_VERSION',	'3.2');
-define('ZABBIX_DB_VERSION',		3010078);
+define('ZABBIX_DB_VERSION',		3010079);
 
 define('ZABBIX_COPYRIGHT_FROM',	'2001');
 define('ZABBIX_COPYRIGHT_TO',	'2016');
